--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainedElementsMethod.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainedElementsMethod.vm
@@ -3,11 +3,11 @@
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
 #* @vtlvariable name="packElem" type="java.lang.String" *#
 
-override fun containedAllElements() : Iterable<$ctx.getKevoreeContainer().get()> {
+override fun containedAllElements() : MutableIterable<$ctx.getKevoreeContainer().get()> {
         return ${packElem}.DeepIterable(this)
 }
 
-override fun containedElements() : Iterable<$ctx.getKevoreeContainer().get()> {
+override fun containedElements() : MutableIterable<$ctx.getKevoreeContainer().get()> {
         var containedIterables = Array<Any?>($currentClass.getEAllContainments().size(),{i ->
              when (i) {
                  #set($i=0)
