--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/CompositeIterator.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/CompositeIterator.vm
@@ -3,7 +3,9 @@
 
 package ${packElem}.util;
 
-public class CompositeIterator(val subLists : Array<Any?>) : MutableIterator<${ctx.getKevoreeContainer().get()}> {
+#set($mutableOrNot="Mutable")
+
+public class CompositeIterator(val subLists : Array<Any?>) : ${mutableOrNot}Iterator<${ctx.getKevoreeContainer().get()}> {
 
 
     private var i = 0;
@@ -53,8 +55,9 @@ public class CompositeIterator(val subLists : Array<Any?>) : MutableIterator<${c
         }
     }
 
-override public fun remove() {
+#if(!$ctx.jS)override#end public fun remove() {
         throw java.lang.UnsupportedOperationException();
     }
 
 }
+
