fix unescape string from JSON loader

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/JSONLoader.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/json/JSONLoader.vm
@@ -87,7 +87,7 @@ override fun loadModelFromPath(file: java.io.File) : List<Any>? {
                 }
             } else {
                 if(builder != null) {
-                    builder = builder + c
+                    builder = builder!! + c
                 }
                 i++
             }
