Fix ThingML, CloudML issues Fix compat for Kermeta and JS :-)

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
@@ -17,6 +17,8 @@ fun delete()
 
 fun modelEquals(similarObj : Any?) : Boolean
 
+fun getRefInParent() : String?
+
 #if(${ctx.genSelector})
     fun selectByQuery(query : String) : List<Any>
 #end
