--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerJAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerJAPI.vm
@@ -14,17 +14,20 @@ public interface ${formatedFactoryName} {
 public void setRecursiveReadOnly();
 public ${formatedFactoryName} eContainer();
 
-@org.jetbrains.annotations.NotNull
-public Boolean isReadOnly();
+public String getRefInParent();
+
 
 @org.jetbrains.annotations.NotNull
-public Boolean isRecursiveReadOnly();
+public boolean isReadOnly();
+
+@org.jetbrains.annotations.NotNull
+public boolean isRecursiveReadOnly();
 
 public void setInternalReadOnly();
 public void delete();
 
 @org.jetbrains.annotations.NotNull
-public Boolean modelEquals(Object similarObj);
+public boolean modelEquals(Object similarObj);
 
 @org.jetbrains.annotations.NotNull
 public Iterable<${packElem}.${formatedFactoryName}> containedElements();
@@ -42,7 +45,7 @@ public <A> A findByPath(@org.jetbrains.annotations.NotNull String query, @org.je
 Object findByPath(@org.jetbrains.annotations.NotNull String query);
 public String path();
 
-public void getClonelazy(@org.jetbrains.annotations.NotNull java.util.IdentityHashMap<Object,Object> subResult,  @org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.factory.MainFactory _factories, @org.jetbrains.annotations.NotNull Boolean mutableOnly);
-public Object resolve(@org.jetbrains.annotations.NotNull java.util.IdentityHashMap<Object,Object> addrs,@org.jetbrains.annotations.NotNull Boolean readOnly, @org.jetbrains.annotations.NotNull Boolean mutableOnly);
+public void getClonelazy(@org.jetbrains.annotations.NotNull java.util.IdentityHashMap<Object,Object> subResult,  @org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.factory.MainFactory _factories, @org.jetbrains.annotations.NotNull boolean mutableOnly);
+public Object resolve(@org.jetbrains.annotations.NotNull java.util.IdentityHashMap<Object,Object> addrs,@org.jetbrains.annotations.NotNull boolean readOnly, @org.jetbrains.annotations.NotNull boolean mutableOnly);
 
 }
