--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -11,7 +11,6 @@ trait ${formatedFactoryName}Impl {
     fun eContainer() : ${packElem}.${formatedFactoryName}? { return internal_eContainer }
 
     internal open var internal_containmentRefName : String?
-    fun setContainmentRefName(name : String?){ internal_containmentRefName = name }
 
     internal open var internal_readOnlyElem : Boolean
 
@@ -23,6 +22,11 @@ trait ${formatedFactoryName}Impl {
         internal_readOnlyElem = true
     }
 
+    fun getRefInParent() : String? {
+        return internal_containmentRefName
+    }
+
+
     fun isReadOnly() : Boolean {
         return internal_readOnlyElem
     }
@@ -31,7 +35,7 @@ trait ${formatedFactoryName}Impl {
         return internal_recursive_readOnlyElem
     }
 
-    fun setEContainer( container : ${packElem}.${formatedFactoryName}?, unsetCmd : (()->Unit)? ) {
+    fun setEContainer( container : ${packElem}.${formatedFactoryName}?, unsetCmd : (()->Unit)?, refNameInParent : String? ) {
 
         if(internal_readOnlyElem){return}
 
@@ -42,6 +46,9 @@ trait ${formatedFactoryName}Impl {
         }
         internal_eContainer = container
         internal_unsetCmd = unsetCmd
+
+        internal_containmentRefName = refNameInParent
+
     }
 
 }
