--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerJAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerJAPI.vm
@@ -28,6 +28,8 @@ public void delete();
 
 @org.jetbrains.annotations.NotNull
 public boolean modelEquals(Object similarObj);
+@org.jetbrains.annotations.NotNull
+public boolean deepModelEquals(Object similarObj);
 
 @org.jetbrains.annotations.NotNull
 public Iterable<${packElem}.${formatedFactoryName}> containedElements();
