--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/EqualsMethod.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/EqualsMethod.vm
@@ -2,6 +2,34 @@
 #* @vtlvariable name="FQNHelper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelper" *#
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
 
+
+override fun deepModelEquals(similarObj : Any?) : Boolean {
+    if(!modelEquals(similarObj)){
+        return false
+    }
+    val similarObjCasted = similarObj as ${FQNHelper.fqn($ctx, $currentClass)}
+    #foreach( $sub in $currentClass.getEAllContainments())
+        #if($sub.isMany())
+        for(subElement in get${sub.getName().substring(0, 1).toUpperCase()}${sub.getName().substring(1)}()){
+        #if($sub.getEReferenceType().getEIDAttribute())
+            val foundedElement = similarObjCasted.find${sub.getName().substring(0, 1).toUpperCase()}${sub.getName().substring(1)}ByID(subElement.get${sub.getEReferenceType().getEIDAttribute().getName().substring(0, 1).toUpperCase()}${sub.getEReferenceType().getEIDAttribute().getName().substring(1)}())
+            if(foundedElement == null || foundedElement != subElement){ return false }
+        #else
+            //todo optimize with pre sort on collection
+            var lookEqualsSub = false
+            for(subElement2 in similarObjCasted.get${sub.getName().substring(0, 1).toUpperCase()}${sub.getName().substring(1)}()){
+                if(subElement.deepModelEquals(subElement2)){
+                    lookEqualsSub = true
+                }
+            }
+            if(!lookEqualsSub){return false }
+        #end
+        }
+        #end
+    #end
+    return true
+}
+
 override fun modelEquals(similarObj : Any?) : Boolean {
 
 #if($ctx.getJS())
@@ -27,26 +55,6 @@ if(similarObj == null || !(similarObj is ${FQNHelper.fqn($ctx, $currentClass)}))
             if(get${sub.getName().substring(0, 1).toUpperCase()}${sub.getName().substring(1)}() != similarObjCasted.get${sub.getName().substring(0, 1).toUpperCase()}${sub.getName().substring(1)}()){
                 return false
             }
-        #end
-    #end
-
-    #foreach( $sub in $currentClass.getEAllContainments())
-        #if($sub.isMany())
-        for(subElement in get${sub.getName().substring(0, 1).toUpperCase()}${sub.getName().substring(1)}()){
-        #if($sub.getEReferenceType().getEIDAttribute())
-            val foundedElement = similarObjCasted.find${sub.getName().substring(0, 1).toUpperCase()}${sub.getName().substring(1)}ByID(subElement.get${sub.getEReferenceType().getEIDAttribute().getName().substring(0, 1).toUpperCase()}${sub.getEReferenceType().getEIDAttribute().getName().substring(1)}())
-            if(foundedElement == null || foundedElement != subElement){ return false }
-        #else
-            //todo optimize with pre sort on collection
-            var lookEqualsSub = false
-            for(subElement2 in similarObjCasted.get${sub.getName().substring(0, 1).toUpperCase()}${sub.getName().substring(1)}()){
-                if(subElement.modelEquals(subElement2)){
-                    lookEqualsSub = true
-                }
-            }
-            if(!lookEqualsSub){return false }
-        #end
-        }
         #end
     #end
     return true
