Closures for resolution replaced by Command pattern. Also fixed a bug in the XMI loader (ThingML-LightFollower sample)

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerJAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerJAPI.vm
@@ -26,6 +26,8 @@ public boolean isRecursiveReadOnly();
 public void setInternalReadOnly();
 public void delete();
 
+public void reflexiveSetters(@org.jetbrains.annotations.NotNull String method, Object value);
+
 @org.jetbrains.annotations.NotNull
 public boolean modelEquals(Object similarObj);
 
