--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
@@ -30,6 +30,8 @@ fun getRefInParent() : String?
 fun findByPath(query : String) : Any?
 fun path() : String?
 
+fun reflexiveSetters(method : String, value : Any?)
+
 #if(${ctx.jS})
     fun getClonelazy(subResult : java.util.HashMap<Any,Any>, _factories : ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.factory.MainFactory, mutableOnly: Boolean)
     fun resolve(addrs : java.util.HashMap<Any,Any>,readOnly:Boolean, mutableOnly: Boolean) : Any
