Clean and prepare for Runnable

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ResolveCommand.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ResolveCommand.vm
@@ -3,5 +3,5 @@
 package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.loader
 
 public trait ResolveCommand {
-    open fun execute()
+    open fun run()
 }
