--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/JSONResolveCommand.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/JSONResolveCommand.vm
@@ -3,7 +3,7 @@
 package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.loader
 
 public class JSONResolveCommand(val context : LoadingContext, val target : ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.container.KMFContainer, val method : String, val ref : String) : ResolveCommand {
-    override fun execute() {
+    override fun run() {
         var referencedElement = context.map.get(ref)
         var i = 0
         while(referencedElement == null && i < context.loadedRoots.size()) {
