--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerJAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerJAPI.vm
@@ -52,4 +52,11 @@ public String path();
 public void getClonelazy(@org.jetbrains.annotations.NotNull java.util.IdentityHashMap<Object,Object> subResult,  @org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.factory.MainFactory _factories, @org.jetbrains.annotations.NotNull boolean mutableOnly);
 public Object resolve(@org.jetbrains.annotations.NotNull java.util.IdentityHashMap<Object,Object> addrs,@org.jetbrains.annotations.NotNull boolean readOnly, @org.jetbrains.annotations.NotNull boolean mutableOnly);
 
+#if(${ctx.generateEvents()})
+    public void addModelElementListener(@org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.events.ModelElementListener lst);
+    public void removeModelElementListener(@org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.events.ModelElementListener lst);
+    public void addModelTreeListener(@org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.events.ModelTreeListener lst);
+    public void removeModelTreeListener(@org.jetbrains.annotations.NotNull ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.events.ModelTreeListener lst);
+#end
+
 }
